--- a/assets/css/n.css
+++ b/assets/css/n.css
@@ -969,12 +969,14 @@ form label span {
 
 .important{
     color: black;
-    font-weight: normal;;
+    font-weight: normal;
+
 }
 
 .section-current_projects .question{
   font-weight: bold;
-    text-align: center;
+    margin: 15px 35% 15px 35%;
+    max-width: 30%;
 }
 
 .qtag {
